# sdd-development-uisng-openspec-with-claude-guide

./: .gitignore  README.md
.github/scripts/: build_docs_site.py
.github/workflows/: deploy-docs.yml
claude-guide/: 01-creating-a-skill.md  02-creating-agent-skills.md  03-adding-mcp-servers.md  04-general-guide.md  05-creating-claude-md.md
openspec-guide/: 02-command-outputs-and-token-optimization.md  Openspec-Documenetation.md
travel-itinerary-agent/: .gitignore  BUILD-LOG.md  README.md  pyproject.toml
travel-itinerary-agent/itinerary/: cli.py  config.py  generator.py  renderer.py  schema.py
travel-itinerary-agent/openspec/: config.yaml
travel-itinerary-agent/openspec/changes/archive/2026-07-09-add-travel-itinerary-cli/: design.md  proposal.md  tasks.md
travel-itinerary-agent/openspec/changes/archive/2026-07-09-add-travel-itinerary-cli/specs/travel-itinerary/: spec.md
travel-itinerary-agent/openspec/changes/archive/2026-07-09-fix-api-error-handling/: design.md  proposal.md  tasks.md
travel-itinerary-agent/openspec/changes/archive/2026-07-09-fix-api-error-handling/specs/travel-itinerary/: spec.md
travel-itinerary-agent/openspec/specs/travel-itinerary/: spec.md
travel-itinerary-agent/tests/: test_cli.py  test_config.py  test_generator.py  test_renderer.py  test_schema.py
