[project]
name = "travel-itinerary-agent"
version = "0.1.0"
description = "Small CLI that generates a day-by-day travel itinerary via an OpenAI-compatible model."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
itinerary = "itinerary.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["itinerary*"]
